Interpreter/Examples/good/example3.jam
/* Example of boolean values */
main {
vars:
    bool someBool = false;
code:
    print(someBool);
    print(!someBool);
}
