Interpreter/Examples/bad/example2.jam
/* Using undeclared variable */
main {
    print(x);
}
